<resources>
    <string name="app_name">Library on the go</string>
    <string name="title_activity_main2">Library on the go</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TEXTS FOR MENU -->
    <string name="principal">Home</string>
    <string name="Registrar">Add a new book</string>
    <string name="All">View all the books</string>
    <string name="Autor">Find books by author</string>
    <string name="help">Help</string>
    <string name="about">About</string>

    <!-- TEXTS FOR HOME -->
    <string name="modificacio">Modify</string>


    <!-- TEXTS FOR ADD NEW BOOK -->
    <string name="title">Title</string>
    <string name="autor">Author</string>
    <string name="any">Year</string>
    <string name="publicador">Publisher</string>
    <string name="genere">Category</string>
    <string name="evaluacio">Personal evaluation</string>

    <!-- TEXTS FOR SEARCH BY AUTHOR -->
    <string name="Cerca">Find</string>
    <string name="chivato">Complete author name here</string>
    <string name="allautors">View all authors</string>

    
    
    
    <string name="app_info">Application information</string>







    

    <string name="action_settings">Settings</string>

    <string name="version">Version 1.0</string>
    <string name="autores">Created By: Carlota Catot and Gorka Piñol</string>
    <string name="anydecreacio">2016 - UPC - FIB - IDI</string>

    <string-array name="ratings_array">
        <item>Very bad</item>
        <item>Bad</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Very good</item>
    </string-array>

    <string-array name="categories_array">
        <item>Fantasy</item>
        <item>Historical</item>
        <item>Humor</item>
        <item>Mystery/Thriller</item>
        <item>Non-fiction</item>
        <item>Realistic</item>
        <item>Romance</item>
        <item>Sci-fi</item>
        <item>Other</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_by_author">By Author</string>
    <string name="title_activity_modify_evaluation">Modify Personal Evaluation</string>
</resources>
