<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.pr_idi.mydatabaseexample.FragmentAbout">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_gravity="center_vertical"
                  android:orientation="vertical">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="50dp"
                  android:textColor="@color/Black"
                  android:textAlignment="center"
                  android:layout_gravity="center"
                  android:paddingTop="100dp"
                  android:text="@string/app_name"/>

       <ImageView android:layout_width="wrap_content"
                  android:layout_height="149dp"
                  android:src="@drawable/icono"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="20dp"
                  android:textColor="@color/Black"
                  android:textAlignment="center"
                  android:layout_gravity="center"
                  android:text="@string/version"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16dp"
                  android:textColor="@color/Black"
                  android:textAlignment="center"
                  android:layout_gravity="center"
                  android:text="@string/autores"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="16dp"
                  android:textColor="@color/Black"
                  android:textAlignment="center"
                  android:layout_gravity="center"
                  android:text="@string/anydecreacio"/>



    </LinearLayout>

</FrameLayout>
