<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.example.pr_idi.mydatabaseexample.SearchAuthor">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:paddingTop="10dp"
                  android:paddingLeft="15dp"
                  android:paddingRight="15dp"
                  android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="horizontal">

            <TextView android:id="@+id/nomautor"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textSize="16dp"
                      android:textColor="@color/Navy"
                      android:text="Author name:"/>

            <EditText android:id="@+id/nomautorinsertat"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:maxLines="1"
                      android:textColor="@color/Black"
                      android:hint="@string/chivato"
                      android:inputType="text"
                      android:textSize="16dp"/>
        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginBottom="15dp"
                      android:layout_marginTop="10dp"
                      android:weightSum="1">

            <Button android:id="@+id/boto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/Cerca"
                    android:layout_weight="0.59"/>

            <Button android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:text="@string/allautors"
                    android:textSize="14dp"
                    android:id="@+id/allauthors" android:layout_weight="0.35"/>

        </LinearLayout>

        <TextView android:id="@+id/nomautorcerca"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  tools:text="NOM AUTOR"
                  android:textAlignment="center"
                  android:textSize="18dp"
                  android:layout_marginBottom="10dp"
                  android:visibility="gone"
                  android:textColor="@color/Navy"/>

        <ListView android:id="@+id/list_autor"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

</FrameLayout>
